[package]
name = "sfn-paw"
version = "1.0.3"
edition = "2021"
description = "Step Functions CLI Tool"
license = "MIT"
documentation = "https://docs.rs/paw"
repository = "https://github.com/dawsonfi/paw"

[dependencies]
dialoguer = "0.9.0"
indicatif = "0.16.2"
console = "0.15.0"
aws-config = "0.6.0"
aws-sdk-sfn = "0.6.0"
aws-smithy-types = "0.36.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"