[package]
name = "sfn-paw"
version = "1.0.3"
edition = "2021"
description = "Step Functions CLI Tool"
license = "MIT"
documentation = "https://docs.rs/paw"
repository = "https://github.com/dawsonfi/paw"

[dependencies]
dialoguer = "0.10.0"
indicatif = "0.16.2"
console = "0.15.0"
aws-config = "0.9.0"
aws-sdk-sfn = "0.9.0"
aws-smithy-types = "0.39.0"
aws-smithy-http = "0.39.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
mockall_double = "0.2.1"
mockall = "0.11.0"
async-trait = "0.1.53"